--- a/home.html
+++ b/home.html
@@ -103,7 +103,9 @@
               </p>
             </div>
             <div class="row">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <div>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
             </div>
           </div>
           <div class="col content-image">
@@ -116,7 +118,7 @@
       <div class="divider">
         <img
           class="divider-img"
-          src="../images/divider.png"
+          src="./images/divider.png"
           alt="Divider Image"
         />
       </div>
@@ -171,7 +173,7 @@
       <div class="divider">
         <img
           class="divider-img"
-          src="../images/divider.png"
+          src="./images/divider.png"
           alt="Divider Image"
         />
       </div>
