--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
       <div class="nav-container" id="mobile-nav-before">
         <div class="mobile-nav-before">
           <div class="navbar-logo">
-            <a href="#"><img src="./images/logo.png" alt="Logo" /></a>
+            <a href="#"><img src="./images/logo-mobile.png" alt="Logo" /></a>
           </div>
           <i id="humberger" class="fa" onclick="openNav()"
             ><img src="./images/humburger.png"
@@ -97,9 +97,7 @@
             <div class="row small-text">
               <p>
                 Denmark played a major role in the Viking Age, and its legacy is
-                still visible in its culture and place names. Denmark is a
-                progressive and forward-thinking country with a high quality of
-                life.
+                still visible in its culture and place names.
               </p>
             </div>
             <div class="row">
@@ -309,6 +307,11 @@
     </section>
     <section class="logo-section">
       <div class="container">
+        <img
+          class="star-icon"
+          src="../images/food-icon.png"
+          alt="Dessert Icon"
+        />
         <h2 class="section-title">Unveiling the Land of Everyday Wonder</h2>
         <p class="section-description">
           Denmark is one of the oldest kingdoms in the world and is known for
@@ -320,25 +323,29 @@
           <div class="col logo-col">
             <div class="image-container">
               <img src="./images/city-1.jpg" alt="Partner 1" />
-              <a href="#" class="btn">Copenhagen</a>
+              <a href="https://www.visitcopenhagen.com/" class="btn"
+                >Copenhagen</a
+              >
             </div>
           </div>
           <div class="col logo-col">
             <div class="image-container">
               <img src="./images/city-2.jpg" alt="Partner 2" />
-              <a href="#" class="btn">Odence</a>
+              <a href="https://www.visitodense.com/" class="btn">Odence</a>
             </div>
           </div>
           <div class="col logo-col">
             <div class="image-container">
               <img src="./images/city-3.jpg" alt="Partner 3" />
-              <a href="#" class="btn">Aarhus</a>
+              <a href="https://www.visitaarhus.com/" class="btn">Aarhus</a>
             </div>
           </div>
           <div class="col logo-col">
             <div class="image-container">
               <img src="./images/city-4.jpg" alt="Partner 3" />
-              <a href="#" class="btn">Aalborg</a>
+              <a href="https://www.enjoynordjylland.com/aalborg" class="btn"
+                >Aalborg</a
+              >
             </div>
           </div>
         </div>
