--- a/html/culture.html
+++ b/html/culture.html
@@ -76,7 +76,7 @@
       <div class="nav-container" id="mobile-nav-before">
         <div class="mobile-nav-before">
           <div class="navbar-logo">
-            <a href="#"><img src="../images/logo.png" alt="Logo" /></a>
+            <a href="#"><img src="../images/logo-mobile.png" alt="Logo" /></a>
           </div>
           <i id="humberger" class="fa" onclick="openNav()"
             ><img src="../images/humburger.png"
@@ -144,15 +144,9 @@
       <div class="overlay">
         <h2 class="section-title">Christmas</h2>
         <p class="section-description">
-          Christmas brings light and joy to Denmark's darkest winter months.
-          Decorations and Christmas treats fill the weeks leading up to December
-          24th, the main day of celebration. Christmas Eve is a family affair,
-          with the country shutting down early to allow everyone to enjoy a
-          traditional Christmas dinner together. This feast often features
-          roasted meats like duck, pork, or goose, along with caramelized
-          potatoes and pickled red cabbage. The Danish love for Christmas is
-          evident even in their energy consumption, with a spike recorded as
-          families turn on ovens to cook their Christmas meals.
+          Denmark lights up the winter gloom with Christmas feasts on Dec 24th.
+          Families gather for roasted meats and sweet treats, making it a
+          heartwarming holiday.
         </p>
       </div>
     </section>
