--- a/html/fact.html
+++ b/html/fact.html
@@ -75,7 +75,7 @@
       <div class="nav-container" id="mobile-nav-before">
         <div class="mobile-nav-before">
           <div class="navbar-logo">
-            <a href="#"><img src="../images/logo.png" alt="Logo" /></a>
+            <a href="#"><img src="../images/logo-mobile.png" alt="Logo" /></a>
           </div>
           <i id="humberger" class="fa" onclick="openNav()"
             ><img src="../images/humburger.png"
@@ -95,8 +95,7 @@
               <p>
                 Can facts be funny? We seem to think so. From weird Danish
                 traditions and letters, old flags and amusement parks to bike-
-                and swim-friendly facts, get to know Denmark a bit better with
-                these fun facts!
+                and swim-friendly facts.
               </p>
             </div>
             <div class="row">
@@ -143,15 +142,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="divider-section">
-      <div class="divider">
-        <img
-          class="divider-img"
-          src="../images/divider.png"
-          alt="Divider Image"
-        />
       </div>
     </section>
     <section class="fact-one-section">
@@ -227,19 +217,31 @@
           <div class="col logo-col">
             <div class="image-container">
               <img src="../images/fact-6.png" alt="Partner 1" />
-              <a href="#" class="btn">Read More</a>
+              <a
+                href="https://youtu.be/bcShCPfUDHo?si=P_eLqzrhcA9Q4OzM"
+                class="btn"
+                >Read More</a
+              >
             </div>
           </div>
           <div class="col logo-col">
             <div class="image-container">
               <img src="../images/fact-7.png" alt="Partner 2" />
-              <a href="#" class="btn">Read More</a>
+              <a
+                href="https://www.globalconstructionreview.com/new-lego-hq-opens-in-denmark/"
+                class="btn"
+                >Read More</a
+              >
             </div>
           </div>
           <div class="col logo-col">
             <div class="image-container">
               <img src="../images/fact-8.png" alt="Partner 3" />
-              <a href="#" class="btn">Read More</a>
+              <a
+                href="https://archello.com/project/lego-headquarters"
+                class="btn"
+                >Read More</a
+              >
             </div>
           </div>
         </div>
