--- a/html/food.html
+++ b/html/food.html
@@ -75,7 +75,7 @@
       <div class="nav-container" id="mobile-nav-before">
         <div class="mobile-nav-before">
           <div class="navbar-logo">
-            <a href="#"><img src="../images/logo.png" alt="Logo" /></a>
+            <a href="#"><img src="../images/logo-mobile.png" alt="Logo" /></a>
           </div>
           <i id="humberger" class="fa" onclick="openNav()"
             ><img src="../images/humburger.png"
@@ -134,13 +134,13 @@
     </section>
     <section class="food-one-section" id="food-one-section-mobile">
       <div class="container">
+        <h2 class="section-title">
+          That's fantastic news for Denmark's culinary scene!
+        </h2>
         <img
           src="../images/food-bg.png"
           alt="Divider Image"
         />
-        <h2 class="section-title">
-          That's fantastic news for Denmark's culinary scene!
-        </h2>
         <p class="section-description">
           Denmark wins the European Championship in gastronomy  After two days of competition with Nordic flavours in Trondheim (Norway), Denmark, represented by Sebastian Holberg Svendsgaard, took the first place on the podium at the Bocuse d'Or Europe. In the last decades, fine dining has become a thing in Denmark, and the number of Michelin star restaurants has just gone up – currently, Denmark holds 45 Michelin starts shared among 35 restaurants.
           <br><br>
