--- a/html/tourism-spot.html
+++ b/html/tourism-spot.html
@@ -79,7 +79,7 @@
       <div class="nav-container" id="mobile-nav-before">
         <div class="mobile-nav-before">
           <div class="navbar-logo">
-            <a href="#"><img src="../images/logo.png" alt="Logo" /></a>
+            <a href="#"><img src="../images/logo-mobile.png" alt="Logo" /></a>
           </div>
           <i id="humberger" class="fa" onclick="openNav()"
             ><img src="../images/humburger.png"
@@ -129,7 +129,6 @@
             width="100%"
             height="400"
             src="https://www.youtube.com/embed/lpeQsxgx3eQ"
-            frameborder="0"
             allowfullscreen
           ></iframe>
         </div>
